--- a/docs/handlebars/toc.yml
+++ b/docs/handlebars/toc.yml
@@ -2,12 +2,20 @@ items:
 - name: Overview
   href: index.md
 - name: Now
-  href: extension_now.md  
+  href: extension_now.md
 - name: Random date
-  href: extension_randomstring.md    
+  href: extension_randomstring.md
 - name: Random string
-  href: extension_randomdate.md    
+  href: extension_randomdate.md
+- name: Random number
+  href: extension_randomnumber.md  
 - name: String wrap
-  href: extension_stringwrap.md      
+  href: extension_stringwrap.md
 - name: String compare
-  href: extension_stringcompare.md    
+  href: extension_stringcompare.md
+- name: String diff
+  href: extension_stringdiff.md
+- name: Replicate
+  href: extension_replicate.md
+- name: Space
+  href: extension_space.md
