--- a/docs/handlebars/toc.yml
+++ b/docs/handlebars/toc.yml
@@ -15,6 +15,8 @@ items:
   href: extension_stringcompare.md
 - name: String diff
   href: extension_stringdiff.md
+- name: String replace
+  href: extension_stringreplace.md
 - name: Replicate
   href: extension_replicate.md
 - name: Space
