--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,19 +1,11 @@
 name: Docs
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-    - main
-    paths:
-    - src/**
-    - docs/**
-    - .github/workflows/docs.yml
-  pull_request:
-    branches:
-    - main
-    paths:
-    - docs/**
-    - .github/workflows/docs.yml
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
